[package]
name = "rand-image-method-rs"
version = "0.1.0"
authors = ["matthias"]
edition = "2018"

[lib]
name = "rimrs"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.1"
rand = "0.8.4"
rayon = "1.5"

[dependencies.cpython]
version = "0.6"
[features]
extension-module = ["cpython/extension-module"]
default = ["extension-module"]
